Two-step workflow combining cropping with classification (#52)

--- a/CWLworkflow/image.yml
+++ b/CWLworkflow/image.yml
@@ -1,3 +1,8 @@
-image:
+image_in:
     class: File
     path: carandbike.jpeg
+crop_region: 120x100+10+80
+image_out: cropped.jpg
+output:
+    class: File
+    path: output.txt
