Put in repulling more transparently

--- a/docker/caffe_image_classify/Dockerfile
+++ b/docker/caffe_image_classify/Dockerfile
@@ -105,9 +105,13 @@ RUN apt-get install -y \
 # RUN bash -c 'echo "export PYTHONPATH=/opt/caffe/python:\$PYTHONPATH" >> ~/.bashrc'
 
 # Get the deeplearning git repo
-RUN A=2
 RUN cd /opt && \
   git clone https://github.com/nlesc-sherlock/deeplearning.git
+
+# update A if you want to repull
+RUN A=0
+RUN cd /opt && \
+  git pull
 
 ENV PATH /opt/caffe/.build_release/tools:$PATH
 ENV PYTHONPATH /opt/caffe/python:$PYTHONPATH
