--- a/docker/caffe_image_classify/Dockerfile
+++ b/docker/caffe_image_classify/Dockerfile
@@ -110,7 +110,7 @@ RUN cd /opt && \
 
 # update A if you want to repull
 RUN A=0
-RUN cd /opt && \
+RUN cd /opt/deeplearning && \
   git pull
 
 ENV PATH /opt/caffe/.build_release/tools:$PATH
