Updated dockerfile for ssdnet

--- a/docker/ssdnet/Dockerfile
+++ b/docker/ssdnet/Dockerfile
@@ -2,10 +2,10 @@ FROM nlescsherlockdl/caffe-nv-ssd
 
 RUN apt install -y wget
 
-
-RUN mkdir /models
-WORKDIR /models
-RUN wget http://www.cs.unc.edu/~wliu/projects/SSD/models_VGGNet_ilsvrc15_SSD_500x500.tar.gz
+WORKDIR /
+RUN wget http://www.cs.unc.edu/~wliu/projects/SSD/models_VGGNet_ilsvrc15_SSD_500x500.tar.gz && \
+    tar zxf models_VGGNet_ilsvrc15_SSD_500x500.tar.gz && \
+    rm models_VGGNet_ilsvrc15_SSD_500x500.tar.gz
 COPY models /models
 
 COPY test.py /opt/caffe
