Added entrypoint to docker

--- a/docker/ssdnet/Dockerfile
+++ b/docker/ssdnet/Dockerfile
@@ -8,8 +8,9 @@ RUN wget http://www.cs.unc.edu/~wliu/projects/SSD/models_VGGNet_ilsvrc15_SSD_500
     rm models_VGGNet_ilsvrc15_SSD_500x500.tar.gz
 COPY models /models
 
-COPY test.py /opt/caffe
+COPY detect.py /opt/caffe
 
 WORKDIR $CAFFE_ROOT/data/ilsvrc12
 RUN ./get_ilsvrc_aux.sh
 
+ENTRYPOINT ["/opt/caffe/detect.py", "-t", "0.2"]
