--- a/docker/object_detect_ssdnet/base/Dockerfile
+++ b/docker/object_detect_ssdnet/base/Dockerfile
@@ -8,9 +8,11 @@ RUN wget http://www.cs.unc.edu/~wliu/projects/SSD/models_VGGNet_ilsvrc15_SSD_500
     rm models_VGGNet_ilsvrc15_SSD_500x500.tar.gz
 COPY models /models
 
-COPY detect.py /opt/caffe
-
 WORKDIR $CAFFE_ROOT/data/ilsvrc12
 RUN ./get_ilsvrc_aux.sh
+
+
+COPY detect.py /opt/caffe
+RUN chmod +x /opt/caffe/detect.py
 
 ENTRYPOINT ["/opt/caffe/detect.py", "-t", "0.2"]
