--- a/docker/person_face_gender/Dockerfile
+++ b/docker/person_face_gender/Dockerfile
@@ -22,8 +22,8 @@ FROM nlescsherlockdl/image_classify_base
 MAINTAINER NLeSC <info@esciencecenter.nl>
 
 # update A if you want to repull
-RUN A=2
-RUN cd /opt/deeplearning/Models/GoogleNet_AgeGender_Gender && \
+RUN A=3
+RUN cd /opt/deeplearning && \
   git pull
 
 RUN cd /opt/deeplearning/Models/GoogleNet_AgeGender_Gender && \
