--- a/docker-workflow/object_detect_ssdnet_wrapper/Dockerfile
+++ b/docker-workflow/object_detect_ssdnet_wrapper/Dockerfile
@@ -1,6 +1,9 @@
 FROM nlescsherlockdl/object_detect_ssdnet
 
-COPY detect_wrapper.py /opt/
+COPY detect_wrapper.py /opt/detect_wrapper.py
 RUN chmod +x /opt/detect_wrapper.py
 
-ENTRYPOINT []
+COPY test/data /data
+COPY test/test_input.json /opt/test_input.json
+
+ENTRYPOINT ["/opt/detect_wrapper.py"]
