--- a/docker/object_detect_ssdnet/base/Dockerfile
+++ b/docker/object_detect_ssdnet/base/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR $CAFFE_ROOT/data/ilsvrc12
 RUN ./get_ilsvrc_aux.sh
 
 
-COPY detect.py /opt/caffe
-RUN chmod +x /opt/caffe/detect.py
+COPY detect.py /opt/
+RUN chmod +x /opt/detect.py
 
-ENTRYPOINT ["/opt/caffe/detect.py", "-t", "0.2"]
+ENTRYPOINT ["/opt/detect.py", "-t", "0.2"]
