--- a/docker/car_model/Dockerfile
+++ b/docker/car_model/Dockerfile
@@ -21,6 +21,8 @@ FROM nlescsherlockdl/image_classify_base
 
 MAINTAINER NLeSC <info@esciencecenter.nl>
 
+# update A if you want to repull
+RUN A=0
 RUN cd /opt/deeplearning && \
   git pull
 
