--- a/docker/car_color/Dockerfile
+++ b/docker/car_color/Dockerfile
@@ -21,7 +21,9 @@ FROM nlescsherlockdl/image_classify_base
 
 MAINTAINER NLeSC <info@esciencecenter.nl>
 
-RUN cd /opt/deeplearning/Models/car_color && \
+# update A if you want to repull
+RUN A=0
+RUN cd /opt/deeplearning && \
   git pull
 
 RUN cd /opt/deeplearning/Models/car_color && \
