--- a/docker-workflow/object_detect_ssdnet_wrapper/base/Dockerfile
+++ b/docker-workflow/object_detect_ssdnet_wrapper/base/Dockerfile
@@ -1,4 +1,4 @@
-FROM nlescsherlockdl/object_detect_ssdnet_base
+FROM nlescsherlockdl/ssd:base
 
 COPY detect_wrapper.py /opt/detect_wrapper.py
 RUN chmod +x /opt/detect_wrapper.py
