--- a/docker-workflow/object_detect_ssdnet_wrapper/coco/Dockerfile
+++ b/docker-workflow/object_detect_ssdnet_wrapper/coco/Dockerfile
@@ -1,6 +1,6 @@
-FROM nlescsherlockdl/object_detect_ssdnet_coco
+FROM nlescsherlockdl/ssd:coco
 
 COPY detect_wrapper.py /opt/detect_wrapper.py
 RUN chmod +x /opt/detect_wrapper.py
 
-ENTRYPOINT ["/opt/detect_wrapper.py"]
+ENTRYPOINT ["/usr/bin/python"]
