Worked on changing the workflow to cwl. I may have broken things

--- a/docker-workflow/car_color/Dockerfile
+++ b/docker-workflow/car_color/Dockerfile
@@ -29,8 +29,10 @@ FROM nlescsherlockdl/car:color
 MAINTAINER NLeSC <info@esciencecenter.nl>
 
 # update A if you want to repull
-RUN A=1
+RUN A=5
 RUN cd /opt/deeplearning/ && \
   git pull
+
+COPY image_classify_workflow_wrap_car_color.py /opt/deeplearning/scripts/image_classify_workflow_wrap_car_color.py
 
 ENTRYPOINT ["/opt/deeplearning/scripts/image_classify_workflow_wrap_car_color.py", "-M", "/opt/deeplearning/Models/car_color", "--model_snapshot", "snapshot_iter_63400.caffemodel", "--json"]
