Changed entrypoint and command

--- a/docker/object_detect_ssdnet/coco-wrapper/Dockerfile
+++ b/docker/object_detect_ssdnet/coco-wrapper/Dockerfile
@@ -3,4 +3,5 @@ FROM nlescsherlockdl/ssd:coco
 COPY detect_wrapper.py /opt/detect_wrapper.py
 RUN chmod +x /opt/detect_wrapper.py
 
-ENTRYPOINT ["/usr/bin/python"]
+ENTRYPOINT [""]
+CMD ["/bin/bash"]
