Reordered Dockerfiles and their dependencies

--- a/docker/car/color/Dockerfile
+++ b/docker/car/color/Dockerfile
@@ -1,31 +1,29 @@
 # Build:
-# cd to deeplearning/docker/car_color, then:
+# cd to deeplearning/docker/car/color, then:
 
-# docker build -t nlescsherlockdl/car_color .
-# docker push nlescsherlockdl/car_color
+# docker build -t nlescsherlockdl/car:color .
+# docker push nlescsherlockdl/car:color
 
 # To run on all files in a data directory with batch size 59:
 
-# docker pull nlescsherlockdl/car_color
+# docker pull nlescsherlockdl/car:color
 # DATADIR=/somewhere/on/your/local/filesystem/with/images
 # nvidia-docker run \
 #     -v $DATADIR:/data \
-#     nlescsherlockdl/car_color \
+#     nlescsherlockdl/car:color \
 #     -v \
 #     --batch_size=59 \
 #     --json \
 #     --gpu_id=0 \
 #     -D /data `ls $DATADIR`
 
-FROM nlescsherlockdl/base:image_classify
+FROM nlescsherlockdl/cnn_classify
 
 MAINTAINER NLeSC <info@esciencecenter.nl>
 
 COPY model /model
-COPY image_classify_workflow_wrap_car_color.py /scripts
+# COPY image_classify_workflow_wrap_car_color.py /scripts
 
 RUN cd /model && \
   tar xzf 20161117-151423-d9a3_epoch_100.0.tar.gz
 RUN mv /model/snapshot_iter_63400.caffemodel /model/snapshot.caffemodel
-
-ENTRYPOINT ["/scripts/cnn_classify.py"]
