--- a/docker/boatswain.yml
+++ b/docker/boatswain.yml
@@ -2,7 +2,7 @@ version: 1.0
 organisation: nlescsherlockdl
 images:
 
-  # Single Shot Detection
+  ## Single Shot Detection
   ssd:caffe-nv:
     context: object_detect_ssdnet/caffe-nv-ssd
   ssd:coco:
@@ -24,18 +24,32 @@ images:
     context: object_detect_ssdnet/ilsvrc15-wrapper
     from: ssd:ilsvrc15
 
-  # Cropper
+  ## Cropper
   cropper:latest:
     context: cropper
 
-  # Image Classify Base Images
+  ## Image Classify Base Images
+  ## only used as dependencies, not for running
   base:caffe-nv:
     context: base/caffe-nv
   base:image_classify:
     context: base/image_classify
     from: base:caffe-nv
 
-  # Car Models
-  car:color-workflow:
-    context: car/color
+  ## Bare runnable images
+  ## run bare Python scripts
+  # any model (input option)
+  cnn_classify:
+    context: cnn_classify
+    from: base:image_classify
+  # car model
+  car:color:
+    context: car:color
+    from: cnn_classify
 
+  ## JSON-wrapped runnable images
+  ## run with cwltool; wrap bare scripts in our custom json format
+  # car model
+  car:color-wrapper:
+    context: car:color-wrapper
+    from: car:color
