--- a/docker/base/caffe-nv/Dockerfile
+++ b/docker/base/caffe-nv/Dockerfile
@@ -41,3 +41,6 @@ ENV PYCAFFE_ROOT $CAFFE_ROOT/python
 ENV PYTHONPATH $PYCAFFE_ROOT:$PYTHONPATH
 ENV PATH $CAFFE_ROOT/build/tools:$PYCAFFE_ROOT:$PATH
 RUN echo "$CAFFE_ROOT/build/lib" >> /etc/ld.so.conf.d/caffe.conf && ldconfig
+
+# import matplotlib so it builds the font cache, saving time in derived images
+RUN python -c "import matplotlib.pyplot as plt"
