Fixed car:model image and cosmetics in car:color

--- a/docker/car/model/Dockerfile
+++ b/docker/car/model/Dockerfile
@@ -1,32 +1,28 @@
 # Build:
-# cd to deeplearning/docker/car_model, then:
+# cd to deeplearning/docker/car/model, then:
 
-# docker build -t nlescsherlockdl/car_model .
-# docker push nlescsherlockdl/car_model
+# docker build -t nlescsherlockdl/car:model .
+# docker push nlescsherlockdl/car:model
 
 # To run on all files in a data directory with batch size 59:
 
-# docker pull nlescsherlockdl/car_model
+# docker pull nlescsherlockdl/car:model
 # DATADIR=/somewhere/on/your/local/filesystem/with/images
 # nvidia-docker run \
 #     -v $DATADIR:/data \
-#     nlescsherlockdl/car_model \
+#     nlescsherlockdl/car:model \
 #     -v \
 #     --batch_size=59 \
 #     --json \
 #     --gpu_id=0 \
 #     -D /data `ls $DATADIR`
 
-FROM nlescsherlockdl/image_classify_base
+FROM nlescsherlockdl/cnn_classify
 
 MAINTAINER NLeSC <info@esciencecenter.nl>
 
-# update A if you want to repull
-RUN A=2
-RUN cd /opt/deeplearning && \
-  git pull
+COPY model /model
 
-RUN cd /opt/deeplearning/Models/car_model && \
+RUN cd /model && \
   tar xzf 20161123-113355-22b6_epoch_100.0.tar.gz
-
-ENTRYPOINT ["/opt/deeplearning/scripts/cnn_classify.py", "-M", "/opt/deeplearning/Models/car_model", "--model_snapshot", "snapshot_iter_249000.caffemodel"]
+RUN mv /model/snapshot_iter_249000.caffemodel /model/snapshot.caffemodel
