Fixed car:model-wrapper (+ cosmetics on car:color-wrapper)

--- a/docker/car/model-wrapper/Dockerfile
+++ b/docker/car/model-wrapper/Dockerfile
@@ -1,12 +1,12 @@
 # Build:
-# cd to deeplearning/docker-workflow/car_model, then:
+# cd to deeplearning/docker/car/model-wrapper, then:
 
-# docker build -t nlescsherlockdl/car_model_workflow .
-# docker push nlescsherlockdl/car_model_workflow
+# docker build -t nlescsherlockdl/car:model-wrapper .
+# docker push nlescsherlockdl/car:model-wrapper
 
 # To run on all files in a data directory with batch size 59:
 
-# docker pull nlescsherlockdl/car_model_workflow
+# docker pull nlescsherlockdl/car:model-wrapper
 # DATADIR=/somewhere/on/your/local/filesystem/with/images
 # JSONDIR=/somewhere/else/where/the/input/json/file/is/located
 # JSON_INPUT_FILE=input_file_name.json
@@ -16,7 +16,7 @@
 #     -v $DATADIR:/data \
 #     -v $JSONDIR:/json \
 #     -v $OUTDIR:/output \
-#     nlescsherlockdl/car_model_workflow \
+#     nlescsherlockdl/car:model-wrapper \
 #     -v \
 #     --batch_size=59 \
 #     --gpu_id=0 \
@@ -24,13 +24,10 @@
 #     --workflow_out="/output/$JSON_OUTPUT_FILE" \
 #     "/json/$JSON_INPUT_FILE"
 
-FROM nlescsherlockdl/car_model
+FROM nlescsherlockdl/car:model
 
 MAINTAINER NLeSC <info@esciencecenter.nl>
 
-# update A if you want to repull
-RUN A=0
-RUN cd /opt/deeplearning/ && \
-  git pull
+COPY image_classify_workflow_wrap_car_model.py /scripts
 
-ENTRYPOINT ["/opt/deeplearning/scripts/image_classify_workflow_wrap_car_model.py", "-M", "/opt/deeplearning/Models/car_model", "--model_snapshot", "snapshot_iter_249000.caffemodel", "--json"]
+ENTRYPOINT [""]
