--- a/docker/boatswain.yml
+++ b/docker/boatswain.yml
@@ -46,6 +46,9 @@ images:
   car:color:
     context: car/color
     from: cnn_classify
+  car:model:
+    context: car/model
+    from: cnn_classify
 
   ## JSON-wrapped runnable images
   ## run with cwltool; wrap bare scripts in our custom json format
@@ -53,3 +56,7 @@ images:
   car:color-wrapper:
     context: car/color-wrapper
     from: car:color
+  car:model-wrapper:
+    context: car/model-wrapper
+    from: car:model
+
