Fixed face detector docker images

--- a/docker/boatswain.yml
+++ b/docker/boatswain.yml
@@ -55,6 +55,10 @@ images:
   car:model:
     context: car/model
     from: cnn_classify
+  # face detector
+  face:detector:
+    context: face/detector
+    from: base:image_classify
 
   ## JSON-wrapped runnable images
   ## run with cwltool; wrap bare scripts in our custom json format
@@ -66,3 +70,7 @@ images:
   car:model-wrapper:
     context: car/model-wrapper
     from: car:model
+  # face detector
+  face:detector-wrapper:
+    context: face/detector-wrapper
+    from: face:detector
