--- a/docker/face/detector-minimal-wrapper/Dockerfile
+++ b/docker/face/detector-minimal-wrapper/Dockerfile
@@ -1,12 +1,12 @@
 # Build:
-# cd to deeplearning/docker-workflow/face_detector_minimal, then:
+# cd to deeplearning/docker/face/detector-wrapper, then:
 
-# docker build -t nlescsherlockdl/face_detector_workflow .
-# docker push nlescsherlockdl/face_detector_workflow
+# docker build -t nlescsherlockdl/face:detector-wrapper .
+# docker push nlescsherlockdl/face:detector-wrapper
 
 # To run on all files in a data directory with batch size 59:
 
-# docker pull nlescsherlockdl/face_detector_workflow
+# docker pull nlescsherlockdl/face:detector-wrapper
 # DATADIR=/somewhere/on/your/local/filesystem/with/images
 # JSONDIR=/somewhere/else/where/the/input/json/file/is/located
 # JSON_INPUT_FILE=input_file_name.json
@@ -16,27 +16,15 @@
 #     -v $DATADIR:/data \
 #     -v $JSONDIR:/json \
 #     -v $OUTDIR:/output \
-#     nlescsherlockdl/face_detector_workflow \
+#     nlescsherlockdl/face:detector-wrapper \
 #     -D /data \
 #     --workflow_out="/output/$JSON_OUTPUT_FILE" \
 #     "/json/$JSON_INPUT_FILE"
 
-# FROM nlescsherlockdl/face_detector
-
-FROM nlescsherlockdl/cuda7.5-cudnn5-devel
+FROM nlescsherlockdl/face:detector
 
 MAINTAINER NLeSC <info@esciencecenter.nl>
 
-RUN apt update && \
-  apt-get -y install python python-opencv libopencv-dev unzip
+COPY face_detection_workflow_wrap.py /scripts/
 
-# Get the needed files from the local deeplearning git repo
-RUN A=0
-COPY face_detection_workflow_wrap.py wrap_lib.py /opt/
-
-RUN curl -LO https://github.com/wavexx/facedetect/archive/master.zip
-
-RUN unzip master.zip && \
-  cp facedetect-master/facedetect /opt/facedetect.py
-
-ENTRYPOINT ["/opt/face_detection_workflow_wrap.py"]
+ENTRYPOINT [""]
