--- a/docker/face/gender-wrapper/Dockerfile
+++ b/docker/face/gender-wrapper/Dockerfile
@@ -1,12 +1,12 @@
 # Build:
-# cd to deeplearning/docker-workflow/person_face_gender, then:
+# cd to deeplearning/docker/face/gender-wrapper, then:
 
-# docker build -t nlescsherlockdl/person_face_gender_workflow .
-# docker push nlescsherlockdl/person_face_gender_workflow
+# docker build -t nlescsherlockdl/face:gender-wrapper .
+# docker push nlescsherlockdl/face:gender-wrapper
 
 # To run on all files in a data directory with batch size 59:
 
-# docker pull nlescsherlockdl/person_face_gender_workflow
+# docker pull nlescsherlockdl/face:gender-wrapper
 # DATADIR=/somewhere/on/your/local/filesystem/with/images
 # JSONDIR=/somewhere/else/where/the/input/json/file/is/located
 # JSON_INPUT_FILE=input_file_name.json
@@ -16,7 +16,7 @@
 #     -v $DATADIR:/data \
 #     -v $JSONDIR:/json \
 #     -v $OUTDIR:/output \
-#     nlescsherlockdl/person_face_gender_workflow \
+#     nlescsherlockdl/face:gender-wrapper \
 #     -v \
 #     --batch_size=59 \
 #     --gpu_id=0 \
@@ -24,13 +24,10 @@
 #     --workflow_out="/output/$JSON_OUTPUT_FILE" \
 #     "/json/$JSON_INPUT_FILE"
 
-FROM nlescsherlockdl/person_face_gender
+FROM nlescsherlockdl/face:gender
 
 MAINTAINER NLeSC <info@esciencecenter.nl>
 
-# update A if you want to repull
-RUN A=1
-RUN cd /opt/deeplearning/ && \
-  git pull
+COPY image_classify_workflow_wrap_gender.py /scripts
 
-ENTRYPOINT ["/opt/deeplearning/scripts/image_classify_workflow_wrap_gender.py", "-M", "/opt/deeplearning/Models/GoogleNet_AgeGender_Gender", "--model_snapshot", "snapshot_iter_1665.caffemodel", "--json"]
+ENTRYPOINT [""]
