Added upload docker and cwl step tool thingy

--- a/docker/boatswain.yml
+++ b/docker/boatswain.yml
@@ -90,3 +90,9 @@ images:
   face:gender-wrapper:
     context: face/gender-wrapper
     from: face:gender
+
+  ## Post-pipeline processing
+  # upload
+  upload:
+    context: upload
+
