Fix matplotlib complaining about display

--- a/docker/draw_crop_box/Dockerfile
+++ b/docker/draw_crop_box/Dockerfile
@@ -23,4 +23,6 @@ MAINTAINER NLeSC <info@esciencecenter.nl>
 
 COPY draw_crop_box.py /scripts
 
+ENV MPLBACKEND agg
+
 ENTRYPOINT ["/scripts/draw_crop_box.py"]
