--- a/visualization/dl-sherlock-app/package.json
+++ b/visualization/dl-sherlock-app/package.json
@@ -4,18 +4,24 @@
   "private": true,
   "devDependencies": {
     "@nlesc/react-scripts": "0.1.2",
+    "@types/d3": "^4.5.0",
+    "@types/d3-selection": "^1.0.9",
     "@types/react": "0.14.50",
     "@types/react-dom": "0.14.19",
     "@types/react-mdl": "1.7.18",
+    "@types/react-native": "0.37.12",
     "@types/react-redux": "4.4.33",
     "@types/whatwg-fetch": "0.0.32"
   },
   "dependencies": {
     "classnames": "2.2.5",
+    "d3": "^4.5.0",
     "react": "15.4.0",
     "react-dom": "15.4.0",
+    "react-faux-dom": "^3.0.0",
     "react-mdl": "1.9.0",
     "react-redux": "4.4.6",
+    "react-native": "0.37.0",
     "redux": "3.6.0",
     "redux-thunk": "2.2.0",
     "whatwg-fetch": "2.0.1"
