--- a/docker/object_detect_yolo/Dockerfile
+++ b/docker/object_detect_yolo/Dockerfile
@@ -20,7 +20,7 @@ RUN git clone https://github.com/cwmeijer/darknet.git && cd darknet && make
 
 WORKDIR /darknet
 RUN wget http://pjreddie.com/media/files/yolo.weights
-ADD . /scripts
+COPY . /scripts
 
 ENTRYPOINT [""]
 
